# FEL-Correos

./: .env.EXAMPLE  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  cloudbuild.yml  config.py  database.py  docker-compose.yml  entrypoint.sh  install_hooks.py  main.py  pyproject.toml  requirements.txt  scheduler.py  test_notifications.py
alembic/: env.py
alembic/versions/: 06fd7fad588c_auth_is_active_column.py  3e359d8158b6_auth_is_active_column.py  4a1c43bb69ce_companies_suscription.py  4cf737ead86b_initial.py  799c5d50b572_requests_logs.py  8abd22be1aae_initial.py  ba5443106668_username_to_email.py  db3320a7e30a_subscription_limits_requests_count.py  df3d02f219e5_initial.py  f75dfd7ed4f8_initial.py
app/: config.py  database.py  main.py
app/clients/: zoho_client.py
app/core/: email_processor.py  notifications.py  security.py  xml_processor.py
app/models/: __init__.py  models.py  schemas.py
app/schemas/: issuer.py  user.py
app/utils/: fix_json.py  fix_json_v2.py
auth/: __init__.py
auth/routers/: auth.py  router.py
clients/: __init__.py  zoho_client.py
core/: security.py  xml_processor.py
health_check/routers/: health_check.py
invoices/: __init__.py
invoices/routers/: invoices.py  router.py
middlewares/: __init__.py  auth_and_logging.py  verify_token_route.py
models/: models.py
schemas/: accountant.py  company.py  invoices.py  issuer.py  token.py
user/: user_helper.py
user/models/: model.py
user/routers/: router.py
users/: __init__.py  helper.py  user_helper.py
utils/: fix_json.py  fix_json_v2.py
web/: routes.py
(+7 files in other folders)
