[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
  | migrations
  | .*/migrations
  | \.aws
)/
'''

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | migrations
  | .*/migrations
  | \.aws
)/
'''

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
